🐛 Refactor CSS styles for containers. Was not displayed correctly on small displays

--- a/processSuite/apps/processSuite/frontend/src/Pages/BuddyAndEmployeeSelection/BuddyAndEmployeeSelection.module.css
+++ b/processSuite/apps/processSuite/frontend/src/Pages/BuddyAndEmployeeSelection/BuddyAndEmployeeSelection.module.css
@@ -1,3 +1,9 @@
 .button{
     margin: 5px;
 }
+
+.container {
+    height: 500px !important;
+  }
+  
+  
